--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,7 +48,7 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --source $(realpath "./src") \
+            --source $(realpath "./site") \
             --destination $(realpath "./public")
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
