--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -49,6 +49,7 @@ jobs:
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
             --source $(realpath "./site") \
+            --themesDir $(realpath "./themes") \
             --destination $(realpath "./public")
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
