Make pages appear as sections

--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://blits.ch/'
 languageCode = 'de-ch'
 title = 'blits wheels - Precision Handbuilt Wheelsets by Pablo Vergés'
 theme = 'blits'
+sectionPagesMenu = 'main'
