--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://blits.ch/'
 languageCode = 'de-ch'
-title = 'blits wheels - Precision Handbuilt Wheelsets by Pablo Vergés'
+title = 'Precision Handbuilt Wheelsets'
 theme = 'blits'
 sectionPagesMenu = 'main'
